<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile_setup.ProfileOrientation">

    <ProgressBar
        android:id="@+id/progressBar_p5"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_height"
        android:progress="56"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_p5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBar_p5"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/my_sexual_orientation_is"
        android:textColor="#000000"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/guideline_p5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/text_p5"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/margin_extra_small"
        android:layout_marginEnd="@dimen/margin_double"
        android:text="@string/select_up_to_3" />

    <TextView
        android:id="@+id/at_least_1_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_p5"
        android:layout_alignStart="@id/text_p5"
        android:text="@string/please_select_at_least_one"
        android:textColor="#FF0000"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/no_more_than_3_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_p5"
        android:layout_alignStart="@id/text_p5"
        android:text="@string/you_can_t_select_more_than_3"
        android:textColor="#FF0000"
        android:visibility="invisible" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup_p5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_p5"
        android:layout_marginTop="@dimen/margin_double"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        app:chipSpacing="30dp"
        app:chipSpacingHorizontal="30dp"
        app:chipSpacingVertical="20dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/straight_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/straight"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_state_colors" />

        <com.google.android.material.chip.Chip
            android:id="@+id/lesbian_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/lesbian"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_state_colors" />

        <com.google.android.material.chip.Chip
            android:id="@+id/gay_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/gay"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_state_colors" />

        <com.google.android.material.chip.Chip
            android:id="@+id/bisexual_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/bisexual"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_state_colors" />

        <com.google.android.material.chip.Chip
            android:id="@+id/asexual_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/asexual"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_state_colors" />

        <com.google.android.material.chip.Chip
            android:id="@+id/demisexual_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/demisexual"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_state_colors" />

        <com.google.android.material.chip.Chip
            android:id="@+id/pansexual_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/pansexual"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_state_colors" />

        <com.google.android.material.chip.Chip
            android:id="@+id/queer_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/queer"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_state_colors" />

        <com.google.android.material.chip.Chip
            android:id="@+id/questionning_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/questioning"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_state_colors" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_p5"
        android:layout_width="@dimen/pill_shape_width"
        android:layout_height="@dimen/pill_shape_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin"
        android:onClick="startProfileShowMe"
        android:text="@string/continue_str"
        app:shapeAppearanceOverlay="@style/PillShapeButton" />
</RelativeLayout>