...
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/margin_double"
            android:layout_marginBottom="@dimen/margin_extra_small"
            android:text="@string/select_up_to_5"/>

        <TextView
            android:id="@+id/no_more_than_5_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_p7"
            android:layout_marginStart="@dimen/margin"
            android:text="@string/you_can_not_select_more_than_5"
            android:textColor="#FF0000"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/at_least_one_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_p7"
            android:layout_marginStart="@dimen/margin"
            android:text="@string/please_select_at_least_one"
            android:textColor="#FF0000"
            android:visibility="invisible"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button_p7"
        android:layout_below="@id/text_p7"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin">

...
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup_p7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:id="@+id/brunch_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="false"
                    android:text="@string/brunch"
                    android:textAlignment="center"
                    app:checkedIconEnabled="false"
                    app:checkedIconVisible="false"
                    app:chipBackgroundColor="@color/chip_state_colors"
                    app:chipEndPadding="6dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/wine_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="false"
                    android:text="@string/wine"
                    android:textAlignment="center"
                    app:checkedIconEnabled="false"
                    app:checkedIconVisible="false"
                    app:chipBackgroundColor="@color/chip_state_colors"
                    app:chipEndPadding="6dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/fashion_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="false"
                    android:text="@string/fashion"
                    android:textAlignment="center"
                    app:checkedIconEnabled="false"
                    app:checkedIconVisible="false"
                    app:chipBackgroundColor="@color/chip_state_colors"
                    app:chipEndPadding="6dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cycling_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="false"
                    android:text="@string/cycling"
                    android:textAlignment="center"
                    app:checkedIconEnabled="false"
                    app:checkedIconVisible="false"
                    app:chipBackgroundColor="@color/chip_state_colors"
                    app:chipEndPadding="6dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/running_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="false"
                    android:text="@string/running"
                    android:textAlignment="center"
                    app:checkedIconEnabled="false"
                    app:checkedIconVisible="false"
                    app:chipBackgroundColor="@color/chip_state_colors" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/coffee_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="false"
                    android:text="@string/coffee"
                    android:textAlignment="center"
...
